# RevomonAgent

./: .env.example  .gitignore  README.md  pyproject.toml
revomon_agent/: agent.py  callbacks.py  descriptions.py  instructions.py  revomonauto_mcp_server.py  utils.py
revomon_agent/callbacks/: __init__.py  callbacks.py
revomon_agent/configs/: app.py  mcp.py
revomon_agent/mcp/: config.py  utils.py
revomon_agent/revomonagent_mcp/: server.py
revomon_agent/services/: ears.py  voice.py
revomon_agent/sub_agents/: __init__.py
revomon_agent/sub_agents/app_launcher_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/clan_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/discussion_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/friends_list_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/google_search_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/inventory_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/main_menu_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/market_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/menu_management_agent/: __init__.py  agent.py  descriptions.py  instructions.py
revomon_agent/sub_agents/pvp_agent/: __init__.py  agent.py  (+2 more)
revomon_agent/toolbox/: tools.py
revomon_agent/utils/: __init__.py  utils.py
(+16 files in other folders)
